--- a/executive-coaching.html
+++ b/executive-coaching.html
@@ -114,7 +114,7 @@ client leads to a co-created relationship." <br /><br />
         <h2>Executive Coaching</h2>
 
         <p>Executive Coaching is a personalized development journey that promotes the client’s performance through
-          conversations,<br> making use of shared inquiry, reflection, support, explore and challenge.<br> As a pathway
+          conversations,<br> making use of shared inquiry, listening, reflection, support, explore and challenge.<br> As a pathway
           for personal and professional growth, coaching is now firmly established in the sports and
           business
           worlds and enjoys a growing popularity over the last two decades since 2002. Research into workplace coaching
@@ -154,7 +154,7 @@ client leads to a co-created relationship." <br /><br />
                 style="font-style:normal">I</b>nquiry, <b style="font-style:normal">C</b>hallenge, <b
                 style="font-style:normal">E</b>xplore & <b style="font-style:normal">R</b>eflection.<br><br></p>
 
-            <p style="text-align:left">Anamitra's preferred approach: For me the MBTI typology dominant function points
+            <p style="text-align:left">Anamitra's preferred approach: For me, the MBTI typology dominant function points
               towards ‘person-focused’
               coaching approach in depth, while the CBQ vector points more towards ‘solution-focused’ coaching approach
               over time.<br><br></p>
@@ -193,12 +193,10 @@ client leads to a co-created relationship." <br /><br />
 
 
         <p class="top-space">An executive coaching (EC) engagement for Directors and CXOs
-          is tailored for the development needs of individuals and teams.<br><br></p>
-        <p>A typical EC engagement is covered in 6-8 EC sessions, of 60-90 mins each including an
-          impactful mindful hour!<br><br></p>
+          is tailored for the development needs of individuals and teams.<br><br></p>       
         <p>EC entails about 10 hours of individual executive coaching conversations, with psychometrics, reflection
           journals <br>and
-          development assignments dovetailed between the EC over a 3-4 month period.<br><br></p>
+          development assignments dovetailed between the EC over a 3-4 month period. A typical EC engagement is covered in 6-8 EC sessions, of 60-90 mins each including an impactful mindful hour!<br><br></p>
         <p>The Coach helps the client to expand mindset, find clarity, undertake relevant behavioural change and reach a
           better place.<br><br></p>
 
