--- a/executive-education.html
+++ b/executive-education.html
@@ -195,12 +195,12 @@
 
 
 
-        <h3>Anamitra’s legacy in consulting skills </h3>
+        <h3>Anamitra’s legacy in Consulting skills and mindset </h3>
         <p class="txt-center">
           Consulting skills executive education has been his legacy. He was the Lead Trainer of the flagship management
           consulting course at PwC globally: MCS Level 1 (GEM Level 1). Post PwC, he used his experience and knowledge
           to create a new Strategy elective on Consulting skills at IIMs in India.<br><br> As Faculty, he has delivered
-          Consulting skills executive education across IIMs and corporate clients. <br>He has delivered Consulting
+          Consulting skills and mindset executive education across IIMs<br> and corporate clients. <br>He has delivered Consulting
           skills courses about 50 times to over 2000 participants. <br><br> A typical consulting skills course takes
           about 24 learning hours, spread over several sessions in<br> a full week with case study and assignments
           dovetailed within the learning week.<br><br>
@@ -304,7 +304,7 @@
       <div class="container">
         <p>Copyright by Anamitra Chatterjee. All rights reserved.</p>
         <ul>
-          <li><a href="#">Services</a></li>
+          <li><a href="executive-coaching.html">Services</a></li>
           <li><a href="myself.html"> Anamitra </a></li>
           <li><a href="client-testimonial.html">Clients & Testimonials</a></li>
           <li><a href="gallery.html">Gallery</a></li>
