--- a/publications.html
+++ b/publications.html
@@ -232,7 +232,7 @@
       <div class="container">
         <p>Copyright by Anamitra Chatterjee. All rights reserved.</p>
         <ul>
-          <li><a href="#">Services</a></li>
+          <li><a href="executive-coaching.html">Services</a></li>
           <li><a href="myself.html"> Anamitra </a></li>
           <li><a href="client-testimonial.html">Clients & Testimonials</a></li>
           <li><a href="gallery.html">Gallery</a></li>
