--- a/organization-behaviour.html
+++ b/organization-behaviour.html
@@ -142,7 +142,7 @@
 -->
 
       <div class="row">
-		  <h3> OB OD Video & Webinar </h3>
+		  <h2> OB Video & Webinar </h2>
         <div class="col-lg-6">
           <div class="video-container">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/h3zfsrOe77g"
@@ -177,7 +177,8 @@
         an updated view of organizational design and development that is engaging for executive education students and
         clients.<br /><br /></p>
 
-      <div class="row">		
+      <div class="row">	
+		  <h2> OD Video & Webinar </h2>
         <div class="col-lg-3">&nbsp; </div>
         <div class="col-lg-6">
           <div class="video-container">
@@ -249,7 +250,7 @@
       <div class="container">
         <p>Copyright by Anamitra Chatterjee. All rights reserved.</p>
         <ul>
-          <li><a href="#">Services</a></li>
+          <li><a href="executive-coaching.html">Services</a></li>
           <li><a href="myself.html"> Anamitra </a></li>
           <li><a href="client-testimonial.html">Clients & Testimonials</a></li>
           <li><a href="gallery.html">Gallery</a></li>
