--- a/executive-education.html
+++ b/executive-education.html
@@ -199,9 +199,8 @@
         <p class="txt-center">
           Consulting skills executive education has been his legacy. He was the Lead Trainer of the flagship management
           consulting course at PwC globally: MCS Level 1 (GEM Level 1). Post PwC, he used his experience and knowledge
-          to create a new Strategy elective on Consulting skills at IIMs in India.<br><br> As Faculty, he has delivered
-          Consulting skills and mindset executive education across IIMs<br> and corporate clients. <br>He has delivered Consulting
-          skills courses about 50 times to over 2000 participants. <br><br> A typical consulting skills course takes
+          to create a new Strategy elective on Consulting skills at IIMs in India.<br><br> As Faculty of Consulting skills and mindset executive education across IIMs
+and corporate clients, he has delivered these education courses about 50 times to over 2000 participants.<br><br> A typical consulting skills course takes
           about 24 learning hours, spread over several sessions in<br> a full week with case study and assignments
           dovetailed within the learning week.<br><br>
 
