--- a/executive-coaching.html
+++ b/executive-coaching.html
@@ -196,7 +196,7 @@ client leads to a co-created relationship." <br /><br />
           is tailored for the development needs of individuals and teams.<br><br></p>       
         <p>EC entails about 10 hours of individual executive coaching conversations, with psychometrics, reflection
           journals <br>and
-          development assignments dovetailed between the EC over a 3-4 month period. A typical EC engagement is covered <br> in 6-8 EC sessions, of 60-90 mins each including an impactful mindful hour!<br><br></p>
+          development assignments dovetailed between the EC over a 3-4 month period. A typical EC engagement is <br>covered in 6-8 EC sessions, of 60-90 mins each including an impactful mindful hour!<br><br></p>
         <p>The Coach helps the client to expand mindset, find clarity, undertake relevant behavioural change and reach a
           better place.<br><br></p>
 
