--- a/executive-education.html
+++ b/executive-education.html
@@ -91,7 +91,7 @@
           education programmes on organizational & leadership development. <br /> He has delivered training to over 25
           clients and 4000 managers. <br /><br /></p>
         <p>Anamitra Chatterjee, Accredited Executive Coach (EMCC) holds a Master’s degree, MSc Masters in Executive</p>
-        <p><br />Coaching (AMEC) from Hult Ashridge Centre for Coaching (ACC), UK. <br /><br /></p>
+        <p>Coaching (AMEC) from Hult Ashridge Centre for Coaching (ACC), UK. <br /><br /></p>
         <p>He underwent the Leadership Development Program (LDP), Center for Creative Leadership (CCL) Brussels.<br />
           Anamitra has 12+ years of work experience in executive education: INSEAD, Hult Ashridge Executive Education UK
           &
@@ -198,7 +198,7 @@
         <h3>Anamitra’s legacy in Consulting skills and mindset </h3>
         <p class="txt-center">
           Consulting skills executive education has been his legacy. He was the Lead Trainer of the flagship management
-          consulting course at PwC globally: MCS Level 1 (GEM Level 1). Post PwC, he used his experience and knowledge
+          consulting course at PwC globally: MCS Level 1 (GEM Level 1). Post PwC,<br> he used his experience and knowledge
           to create a new Strategy elective on Consulting skills at IIMs in India.<br><br> As Faculty of Consulting skills and mindset executive education across IIMs
 and corporate clients, he has delivered these education courses about 50 times to over 2000 participants.<br><br> A typical consulting skills course takes
           about 24 learning hours, spread over several sessions in<br> a full week with case study and assignments
