--- a/leadership.html
+++ b/leadership.html
@@ -110,7 +110,7 @@
         <h2>Leadership Development</h2>
 
 
-        <p>Anamitra`s practice of Leadership Development (LD) encompasses organizational and leader development.<br><br>
+        <p>Anamitra`s practice of Leadership Development (LD) includes organizational and leader development.<br><br>
         </p>
 
 
