--- a/executive-education.html
+++ b/executive-education.html
@@ -200,16 +200,14 @@
           Consulting skills executive education has been his legacy. He was the Lead Trainer of the flagship management
           consulting course at PwC globally: MCS Level 1 (GEM Level 1). Post PwC, he<br>used his experience and knowledge
           to create a new Strategy elective on Consulting skills at IIMs in India.<br><br> As Faculty of Consulting skills and mindset executive education across IIMs
-and corporate clients, he has delivered these education courses about 50 times to over 2000 participants.<br><br> A typical consulting skills course takes
-          about 24 learning hours, spread over several sessions in<br> a full week with case study and assignments
-          dovetailed within the learning week.<br><br>
+and corporate clients, he has delivered these education courses about 50 times to over 2000 participants.<br><br> A typical Consulting skills and mindset course takes 24 learning hours, spread over several sessions with case study and assignments dovetailed within the learning week.<br><br>
 
-          Anamitra believes: Consulting takes the word with (and not to). A Consultant "consults with" clients.<br><br>
+          Anamitra's belief: Consulting takes the word with (and not to). A Consultant "consults with" clients.<br><br>
 
           Anamitra has 25+ years of experience in facilitation and teaching of Consulting skills corporate education. He
           uses his experiences and skills in experiential learning and role-playing while ‘’consulting with
           consultants’’ to develop in them skillful and flawless consulting skills. He is widely acknowledged as a
-          subject matter expert in executive education and corporate training of this niche area, Consulting Skills.
+          subject matter expert in executive education and training of a niche area, Consulting skills and mindset.
         </p>
       </div>
     </div>
