--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
     </header>
     <div class="banner">
         <div class="owl-carousel owl-theme" id="slider">
-            <div class="item"><img src="assets/img/banner-home2-new05.jpg" alt="" /></div>
+            <!--<div class="item"><img src="assets/img/banner-home2-new05.jpg" alt="" /></div>-->
+			<div class="item"><img src="assets/img/myself-ban-3dec2024.jpg" alt="" /></div>
 			<div class="item"><img src="assets/img/banner-home2.jpg" alt="" /></div>
             <div class="item"><img src="assets/img/slider-myself.jpg" alt="" /></div>
             <div class="item"><img src="assets/img/client-testimonial-ban.jpg" alt="" /></div>
