--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
     </header>
     <div class="banner">
         <div class="owl-carousel owl-theme" id="slider">
-            <!--<div class="item"><img src="assets/img/banner-home2-new05.jpg" alt="" /></div>-->
-			<div class="item"><img src="assets/img/myself-ban-home.jpg" alt="" /></div>
+            <!--<div class="item"><img src="assets/img/banner-home2-new05.jpg" alt="" /></div>
+            <div class="item"><img src="assets/img/myself-ban-home.jpg" alt="" /></div> -->
+			<div class="item"><img src="assets/img/slider-myself.jpg" alt="" /></div>			
 			<div class="item"><img src="assets/img/banner-home2.jpg" alt="" /></div>
-            <div class="item"><img src="assets/img/slider-myself.jpg" alt="" /></div>
-            <div class="item"><img src="assets/img/client-testimonial-ban.jpg" alt="" /></div>
+             <div class="item"><img src="assets/img/client-testimonial-ban.jpg" alt="" /></div>
             <div class="item"><img src="assets/img/slider-coaching-banner.jpg" alt="" /></div>
             <div class="item"><img src="assets/img/slider-Organization-OB.jpg" alt="" /></div>
             <div class="item"><img src="assets/img/banner2.jpg" alt="" /></div>
