--- a/gallery.html
+++ b/gallery.html
@@ -35,6 +35,7 @@
                 <li><a href="gallery.html">Photos</a></li>
                 <li><a href="video-gallery.html">Videos</a></li>
                 <li><a href="publications.html">Publications</a></li>
+				<li><a href="conferences.html">Conferences</a></li>
               </ul>
 
             </li>
