--- a/leadership.html
+++ b/leadership.html
@@ -34,6 +34,7 @@
                 <li><a href="gallery.html">Photos</a></li>
                 <li><a href="video-gallery.html">Videos</a></li>
                 <li><a href="publications.html">Publications</a></li>
+				<li><a href="conferences.html">Conferences</a></li>
               </ul>
 
             </li>
@@ -81,13 +82,10 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8">
-            <div class="quote">              
-                &nbsp;				
-            </div>
+            <div class="quote"> &nbsp; </div>
           </div>
           <div class="col-lg-4">
             <div class="img-ban">
-             
             </div>
           </div>
         </div>
