--- a/conferences.html
+++ b/conferences.html
@@ -90,8 +90,9 @@
   <main class="main-wrapper">
     <section class="gallery-wrap">
       <div class="container">
-        <h2>Conferences: Relational Coaching</h2>
-       <p class="text-conf1">Trauma as Mind Disturbance</p>
+        <h2>Conferences: Relational Coaching</h2>		  
+		<p>Friday, June 13, 2025 at Hult Ashridge</p>
+       <p class="text-conf1">Trauma as Mind-Disturbance</p>
 		<p class="publication-txt">
        This workshop will focus on working with the subjective creations of the mind. Our innate propensity to arbitrarily and subjectively define certain situations and outcomes as normal conditions us to expect those normal outcomes every time. The mind reacts to personal misfortunes when reality does not conform to our notions of normal. Trauma can be the result, playing up shock, grievance, and sorrow in repetitive loops. They can emerge as unconscious physical impulses. It is an inalienable principle of every disturbance field, whether spacetime or mind, that the more you disturb a disturbance the more disturbed the field becomes. The workshop will draw on the teachings of the Upanishads to give a fresh perspective to coaches on overcoming a mind disturbed by trauma.
         </p>
