--- a/conferences.html
+++ b/conferences.html
@@ -91,7 +91,10 @@
     <section class="gallery-wrap">
       <div class="container">
         <h2 class="conf-h-m">Trauma-Informed Coaching</h2>		  
-		<p>Friday, June 13, 2025 at Hult Ashridge UK</p>
+		<p class="text-conf-pd">Friday, June 13, 2025 at Hult Ashridge UK</p>
+		<p class="publication-txt">
+		In this world, where instability and crisis have become the order of the day, and where the traumatizing effects of early experiences are better understood, what do executive coaches need to know about trauma?	</p>
+		
        <p class="text-conf1">Trauma as Mind-Disturbance</p>
 		<p class="text-conf-pd" >Anamitra Chatterjee & Avik Mukherjee</p>
 		<p class="publication-txt">
