--- a/conferences.html
+++ b/conferences.html
@@ -93,7 +93,9 @@
         <h2 class="conf-h-m">Trauma-Informed Coaching</h2>		  
 		<p class="text-conf-pd">Friday, June 13, 2025 at Hult Ashridge UK</p>
 		<p class="publication-txt">
-		In this world, where instability and crisis have become the order of the day, and where the traumatizing effects of early experiences are better understood, what do executive coaches need to know about trauma?	</p>
+		This workshop session will focus on working with the subjective creations of the mind.<br>
+
+ Our innate propensity to arbitrarily and subjectively define certain situations and outcomes as normal conditions us to expect those normal outcomes every time. The mind reacts to personal misfortunes when reality does not conform to our notions of normal. Trauma can be the result, playing up shock, grievance, and sorrow in repetitive loops. They can emerge as unconscious physical impulses. It is an inalienable principle of every disturbance field, whether spacetime or mind, that the more you disturb a disturbance the more disturbed the field becomes. The session will give a fresh perspective to coaches on overcoming a mind disturbed by trauma.</p>
 		
        <p class="text-conf1">Trauma as Mind-Disturbance</p>
 		<p class="text-conf-pd" >Anamitra Chatterjee & Avik Mukherjee</p>
