--- a/organization-behaviour.html
+++ b/organization-behaviour.html
@@ -180,21 +180,24 @@
 
       <div class="row">	
 		  <h2> OD Video & Webinar </h2>
-        <div class="col-lg-3">&nbsp; </div>
+        
         <div class="col-lg-6">
           <div class="video-container">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/NjUr_Hs6QU0?si=P1HHdVxDqtm1DjTd"
               title="YouTube video player" frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
               allowfullscreen></iframe>
-          </div>
-          <a href="video-gallery.html" class="more-link">More</a>
+          </div>          
         </div>
 
-        <div class="col-md-3">&nbsp; </div>
+       <div class="col-lg-6">
+          <div class="video-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/gO_j4dxhQWw?si=SnFv4sdJT_EnaKVI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          </div>          
+        </div>
 
 
-
+         <p style="padding-bottom: 30px;"><a href="video-gallery.html" class="more-link">More</a></p>
 
       </div>
 
