--- a/executive-coaching.html
+++ b/executive-coaching.html
@@ -133,7 +133,7 @@ client leads to a co-created relationship." <br /><br />
         <p>Anamitra Chatterjee, Accredited Executive Coach & Faculty has had education and experience<br>
           of 25+ years in India & UK across Deutsche Bank and PwC, Hult Ashridge UK & IIMs in India.<br><br></p>
         <h3>Anamitra’s approach to coaching </h3>
-        <p>“My leadership development and executive coaching practice is informed by own belief in <br> Performance =
+        <p>“My leadership development and executive coaching practice is informed by my own belief in <br> Performance =
           Potential – (Internal) Interference. I rely on this belief and the relational coaching approach to <br>
           support my clients to help them explore behavioural change and attain their goals.” <br><br></p>
 
