--- a/executive-coaching.html
+++ b/executive-coaching.html
@@ -236,7 +236,7 @@ client leads to a co-created relationship." <br /><br />
 
             <li> Sr. VP (Engineer) at Dublin of a Indian Global Tech firm in </br>‘executive presence’</li>
 
-            <li> Director (PhD), at Bangalore of a Big4 professional services firm in ‘leading hybrid teams’</li>
+            <li> Director & Sr. VP at Singapore, Shanghai, Warsaw of a Global Bank in ‘leading hybrid teams’</li>
 
 
 
