--- a/leadership.html
+++ b/leadership.html
@@ -193,16 +193,17 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6">
-            <h2 style="margin:40px 0 10px;">Leadership Development experiences:</h2>
+            <h2 style="margin:30px 0 10px;">Leadership Development experiences:</h2>
             <ul class="education-txt">
 
               <li>Leadership Development & Assessments: clients in Consulting, Telecom, Industrial, Tech</li>
               <li>Workshop Panel & Café: Resilient Leadership & Growth Mindset. Logistics. Virtual-Online</li>
+              <li>Resilient Leadership: The effect of Digital & AI with people alignment/OD in large enterprises</li>
               <li>Mentoring Programme for Mentor-Mentee. Leadership Coaching. Oil & Energy. Live</li>
               <li>Team Leadership: Digital Tech Organization. New Jersey USA & Calcutta India. Hybrid</li>
-              <li>Career Coaching: ILPSE INSEAD Singapore based leadership development programme</li>
-
-
+			  <li>Organizational Behaviour: French R&D Org in ‘organizational behaviour & transformation’</li>	
+			  <li>Career Coaching: ILPSE INSEAD Singapore based leadership development programme</li>	
+			  <li>Leadership of an Investment bank merger at Zurich, London & Bombay in ‘team development’</li>
 
             </ul>
 
@@ -211,17 +212,16 @@
             <h2 style="margin:40px 0 10px;">Hybrid & Virtual-Online experiences:</h2>
 
             <ul class="education-txt">
-              <li>Executive Education: Global Economic Growth. <br>
-                Hybrid & Virtual-Online 2023</li>
+              <li>Executive Education: Global Economic Growth. <br>Hybrid & Virtual-Online 2023</li>
 
-              <li>Leadership of and in Hybrid Teams: IIM Calcutta.<br> Hybrid 2022</li>
+              <li>Leadership of and in Hybrid Teams: IIM Calcutta. Hybrid 2022</li>
 
 
               <li>Consulting Skills training: Case study. Mumbai Gurgaon Calcutta. Hybrid 2021 & 2022</li>
 
               <li>Resilient Leadership: Crisis Change Transitions for Coach Panel. Germany. Virtual-Online 2021</li>
 
-              <li>Team Engagement. Influence & Impact. Facilitation. Indian steel service Co. Virtual-Online 2020</li>
+              <li>Team Engagement. Influence & Impact. Facilitation. <br>Indian steel service Co. Virtual-Online 2020</li>
 
             </ul>
 
