--- a/leadership.html
+++ b/leadership.html
@@ -116,7 +116,7 @@
         <p>Anamitra Chatterjee, Accredited Executive Coach (EMCC) holds a Master’s degree, MSc Masters in <br>Executive
           Coaching (AMEC) from Hult Ashridge Centre for Coaching (ACC), UK.<br><br></p>
 
-        <p>“My leadership development and executive coaching practice is informed by own belief in<br>
+        <p>“My leadership development and executive coaching practice is informed by my own belief in<br>
           Performance = Potential – (Internal) Interference. I coach leaders to develop their own leadership
           style."<br><br></p>
 
