--- a/leadership.html
+++ b/leadership.html
@@ -198,7 +198,7 @@
 
               <li>Leadership Development & Assessments: clients in Consulting, Telecom, Industrial, Tech</li>
               <li>Workshop Panel & Café: Resilient Leadership & Growth Mindset. Logistics. Virtual-Online</li>
-              <li>Resilient Leadership: The effect of Digital & AI with people alignment/OD in large enterprises</li>
+              <li>CHRO IIM Kozhikode: HRM alignment & organizational development in enterprises</li>
               <li>Mentoring Programme for Mentor-Mentee. Leadership Coaching. Oil & Energy. Live</li>
               <li>Team Leadership: Digital Tech Organization. New Jersey USA & Calcutta India. Hybrid</li>
 			  <li>Organizational Behaviour: French R&D Org in ‘organizational behaviour & transformation’</li>	
