--- a/myself.html
+++ b/myself.html
@@ -267,14 +267,7 @@
             <div class="txt-block">
               <h3>Conference Presentations &amp; Invited Talks:</h3>
               <ul>
-                <li>
-                  CEO Fasttrack Career GPT: Gaps Peaks Tranditions: IIMC Alumni Association Bangalore 2024
-
-
-
-                </li>
-
-                <li>
+               <li>
                   Organization Development (OD): The effect of Artificial Intelligence (AI) on OD, Webinar 2023
 
 
@@ -299,7 +292,7 @@
               <ul>
                 <li>IIM Calcutta Alumni Association IIMC AA, Vice Chairman 2024, Secretary 2019-24</li>
                 <li>
-                  Indo British Scholars’ Association IBSA, Chair-Education 2024, LSE Alumni Excom 2014
+                 Indo British Scholars’ Association IBSA Excom, Chairman-Education Council 2024
 
                 </li>
               </ul>
@@ -311,9 +304,7 @@
                 <h3>Publications: Book Chapter</h3>
               </div>
               <ul>
-                <li>Mukherjee, R & Chatterjee, A (2023), Entrepreneurship in the New Normal with Solopreneurs<br>
-                  &nbsp; &nbsp; &nbsp;embracing the Gig-Mindset. In: Entrepreneurship, Development in the New Normal.
-                  New Delhi: Kunal, pp. 72-83.</li>
+                <li>Chatterjee, A & Mukherjee, R (2024), Globalization of Management Consulting. <br>&nbsp;&nbsp;&nbsp;&nbsp; In: Globalization and Sustainable Development.Stockholm:Red’shne, pp. 322-333.</li>
                 <li class="publication">
                   Chatterjee, A (2018), What makes a good Leader. In: Economics, Management and Sustainability.<br>
                   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Singapore: Springer, pp. 277-279.<a href="publications.html">Read</a>
