--- a/client-testimonial.html
+++ b/client-testimonial.html
@@ -30,7 +30,7 @@
                 <li><a href="gallery.html">Photos</a></li>
                 <li><a href="video-gallery.html">Videos</a></li>
                 <li><a href="publications.html">Publications</a></li>
-				<li><a href="conferences.html">Conferences</a></li>
+				<li><a href="conferences.html">International Delegation</a></li>
               </ul>
 
             </li>
