--- a/conferences.html
+++ b/conferences.html
@@ -34,7 +34,7 @@
                 <li><a href="gallery.html">Photos</a></li>
                 <li><a href="video-gallery.html">Videos</a></li>
                 <li><a href="publications.html">Publications</a></li>
-				<li><a href="#">Conferences</a></li>
+				<li><a href="#">International Delegation</a></li>
               </ul>
 
             </li>
