--- a/executive-education.html
+++ b/executive-education.html
@@ -224,13 +224,23 @@ and corporate clients, he has delivered these education courses about 50 times t
   <section class="video-wrap">
     <div class="container">
       <h3> Executive Education Video & Webinar </h3>
-      <div class="row video-box">
+      <div class="row video-box pad-video">
+		  <div class="col-lg-6">
+          <div class="video-container">
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/jX170hqGsZY?si=PVMqSWj2Nxwym906" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          </div>
+        </div>
+		  <div class="col-lg-6">
+          <div class="video-container">
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/l0726EqTNN0?si=m56X5w0uVIUBzlZ6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          </div>
+        </div>
+		</div>
+		
+		   <div class="row video-box">
         <div class="col-lg-6">
           <div class="video-container">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/ii1o232Q6x4?si=h79Ujx7GcwbLAUyP"
-              title="YouTube video player" frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/ii1o232Q6x4?si=GLMgk-XyrqhntnUz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           </div>
         </div>
 
