--- a/conferences.html
+++ b/conferences.html
@@ -94,8 +94,10 @@
       <div class="container">
         <h2>International Delegation</h2>
 		
-        <!-- text --->
-
+        <div class="exclusive-bottom-img" >
+      <img class="img-fluid" src="assets/img/comming soon banner.jpg" alt="">
+    </div>
+		</div>
     </section>
 
 
