--- a/conferences.html
+++ b/conferences.html
@@ -95,7 +95,7 @@
         <h2>International Delegation</h2>
 		
         <div class="exclusive-bottom-img" >
-      <img class="img-fluid" src="assets/img/comming soon banner.jpg" alt="">
+      <img class="img-fluid" src="assets/img/International-Delegation-comming-soon.jpg" alt="">
     </div>
 		</div>
     </section>
