--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="item"><img src="assets/img/myself-ban-home.jpg" alt="" /></div> -->
 			<div class="item"><img src="assets/img/slider-myself.jpg" alt="" /></div>			
 			<div class="item"><img src="assets/img/banner-home2.jpg" alt="" /></div>
-             <div class="item"><img src="assets/img/client-testimonial-ban.jpg" alt="" /></div>
+             <div class="item"><img src="assets/img/client-testimonial-ban-2605.jpg" alt="" /></div>
             <div class="item"><img src="assets/img/slider-coaching-banner.jpg" alt="" /></div>
             <div class="item"><img src="assets/img/slider-Organization-OB.jpg" alt="" /></div>
             <div class="item"><img src="assets/img/banner2.jpg" alt="" /></div>
@@ -262,15 +262,15 @@ Performance = Potential – (Internal) Interference.”</h2> -->
             <ul>
 
                 <li>
-                    <span>27+ </span></br>
-                    years
-                </li>
-                <li>
-                    <span>255 </span></br>
+                    <span>255</span></br>
                     seniors leaders
                 </li>
                 <li>
-                    <span>30+ </span></br>
+                    <span>2800</span></br>
+                    hours
+                </li>
+                <li>
+                    <span>30</span></br>
                     clients
                 </li>
                 <li>
