--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ Performance = Potential – (Internal) Interference.”</h2> -->
                 </li>
                 <li>
                     <span>2800</span></br>
-                    hours
+                    coaching hours
                 </li>
                 <li>
                     <span>30</span></br>
