--- a/myself.html
+++ b/myself.html
@@ -267,6 +267,15 @@
             <div class="txt-block">
               <h3>Conference Presentations &amp; Invited Talks:</h3>
               <ul>
+				  
+<li>
+Education Collaboration: IBSA Delegation to UK: Oxford, 2022 & Cambridge 2025
+
+
+                </li>
+
+
+               
                <li>
                   Organization Development (OD): The effect of Artificial Intelligence (AI) on OD, Webinar 2023
 
@@ -292,7 +301,7 @@
               <ul>
                 <li>IIM Calcutta Alumni Association IIMC AA, Vice Chairman 2024, Secretary 2019-24</li>
                 <li>
-                 Indo British Scholars’ Association IBSA Excom, Chairman-Education Council 2024
+                 Indo British Scholars’ Association IBSA Excom, Chair of Education Council 2024-26
 
                 </li>
               </ul>
