--- a/myself.html
+++ b/myself.html
@@ -269,7 +269,7 @@
               <ul>
 				  
 <li>
-Education Collaboration: IBSA Delegation to UK: Oxford, 2022 & Cambridge 2025
+Education Collaboration: IBSA Delegation to UK, Imperial College & Oxford 2022 and Cambridge 2025
 
 
                 </li>
