--- a/myself.html
+++ b/myself.html
@@ -19,62 +19,87 @@
   <header class="header-wrapper">
     <div class="container">
       <nav class="navbar navbar-expand-lg">
-        <div class="logo">
-          <a href="index.html"><img src="assets/img/logo.png" alt="" /></a>
-        </div>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse navigation" id="navbarSupportedContent">
-          <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-            <li><a href="myself.html">Anamitra</a></li>
-            <li><a href="client-testimonial.html">Clients & Testimonials</a></li>
-            <li><a href="#">Gallery</a>
-              <ul class="sub-menu">
-                <li><a href="gallery.html">Photos</a></li>
-                <li><a href="video-gallery.html">Videos</a></li>
-                <li><a href="publications.html">Publications</a></li>
-				<li><a href="conferences.html">International Delegation</a></li>
-              </ul>
+                <div class="logo">
+                    <a href="index.html"><img src="assets/img/logo.png" alt="" /></a>
+                </div>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse navigation" id="navbarSupportedContent">
+                    <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+						<li><a href="index.html">Home</a></li>
+						<li><a href="#">Service</a>
+                                 <ul class="sub-menu">
+                                <li><a  href="executive-coaching.html">Executive Coaching</a></li>
+                                <li><a  href="executive-education.html">Executive Education</a></li>
+                                <li><a  href="organization-behaviour.html">Organization OB HR OD</a></li>
+                                <li><a  href="leadership.html">Leadership Development</a></li>
+                            </ul>
+                       
+                    </li>
+                        <li><a href="myself.html">About</a></li>
+                        <li><a href="client-testimonial.html">Clients</a></li>
+                        <li><a href="#">Gallery</a>
+                            <ul class="sub-menu">
+                                <li><a href="gallery.html">Photos</a></li>
+                                <li><a href="video-gallery.html">Videos</a></li>
+                                <li><a href="publications.html">Publications</a></li>
+								<li><a href="conferences.html">International Delegation</a></li>
+                            </ul>
 
-            </li>
-            <li><a href="#contact-block">Contact</a></li>
-          </ul>
-        </div>
+                        </li>
+                        <li><a href="#contact-block">Contact</a></li>
+                    </ul>
+                </div>
 
-        <ol>
-          <li><a href="assets/img/AnamitraChatterjee-CV.pdf" target="_blank"><img src="assets/img/icon1.png" alt="" />
-              Bio CV</a></li>
-          <li><a href="https://www.youtube.com/watch?v=LoOr5RHpujc" target="_blank"
-              style="border-color:#000; background-color:#efe46f; color:#000;"><img src="assets/img/icon2-black.png"
-                alt="" style="padding-right: 5px;" />Video</a></li>
-          <li>
-            <div class="dropdown custom-dropdown">
-              <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Services
-              </button>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="executive-coaching.html">Executive Coaching</a></li>
-                <li><a class="dropdown-item" href="executive-education.html">Executive Education</a>
-                </li>
-                <li><a class="dropdown-item" href="organization-behaviour.html">Organization OB HR
-                    OD</a></li>
-                <li><a class="dropdown-item" href="leadership.html">Leadership Development</a></li>
-              </ul>
-            </div>
-          </li>
-        </ol>
+                <ol>
+                    <li><a href="assets/img/AnamitraChatterjee-CV.pdf" target="_blank"><img src="assets/img/icon1.png"
+                                alt="" /> Bio CV</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=LoOr5RHpujc" target="_blank"
+                            style="border-color:#000; background-color:#efe46f; color:#000;"><img
+                                src="assets/img/icon2-black.png" alt="" style="padding-right: 5px;" />Video</a></li>
+                   <!-- red button for service
+						<li>
+                        <div class="dropdown custom-dropdown">
+                            <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Services
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="executive-coaching.html">Executive Coaching</a></li>
+                                <li><a class="dropdown-item" href="executive-education.html">Executive Education</a>
+                                </li>
+                                <li><a class="dropdown-item" href="organization-behaviour.html">Organization OB HR
+                                        OD</a></li>
+                                <li><a class="dropdown-item" href="leadership.html">Leadership Development</a></li>
+                            </ul>
+                        </div>
+                    </li>-->
+                    <!-- <li><a href="#coach-section2" class="btn-color1">Services</a></li> -->
+                    <!-- <ul class="sub-menu">
+                        <li><a href="executive-coaching.html"><span style="font-weight: bold">Executive
+                                    Coaching</span></a></li>
+                        <li><a href="executive-education.html"><span style="font-weight: bold">Executive
+                                    Education</span></a></li>
+                        <li><a href="organization-behaviour.html"><span style="font-weight: bold">Organization
+                                    OB HR
+                                    OD</span></a></li>
+                        <li><a href="leadership.html"><span style="font-weight: bold">Leadership
+                                    Development</span></a></li>
+                    </ul> -->
+                </ol>
 
-        <div class="play-buttons">
-          <audio id="myAudio" src="assets/audio/tagore.mp3"></audio>
-          <button id="playBtn" style="color:Red; background: rgb(239,228,111); border-color:black; "><i
-              class="fa-regular fa-circle-play"></i></button>
-          <button id="stopBtn" style="color:Red; background: rgb(239,228,111);"><i
-              class="fa-solid fa-circle-stop"></i></button>
+                <div class="play-buttons">
+                    <audio id="myAudio" src="assets/audio/tagore.mp3"></audio>
+                    <button id="playBtn" style="color:Red; background: rgb(239,228,111); border-color:black; "><i
+                            class="fa-regular fa-circle-play"></i></button>
+                    <button id="stopBtn" style="color:Red; background: rgb(239,228,111);"><i
+                            class="fa-solid fa-circle-stop"></i></button>
 
-        </div>
-      </nav>
+                </div>
+            </nav>
     </div>
 
   </header>
@@ -473,8 +498,8 @@ Education Collaboration: IBSA Delegation to UK, Imperial College & Oxford 2022 a
         <p>Copyright by Anamitra Chatterjee. All rights reserved.</p>
         <ul>
           <li><a href="executive-coaching.html">Services</a></li>
-          <li><a href="myself.html"> Anamitra </a></li>
-          <li><a href="client-testimonial.html">Clients & Testimonials</a></li>
+          <li><a href="myself.html"> About </a></li>
+          <li><a href="client-testimonial.html">Clients</a></li>
           <li><a href="gallery.html">Gallery</a></li>
           <li><a href="assets/img/AnamitraChatterjee-CV.pdf" target="_blank">Bio CV</a></li>
           <li><a href="https://youtu.be/qVULcHNeX7c?si=dIB5-XDAWqKFh4lC" target="_blank">Profile Video</a></li>
