--- a/index -24-08-25.html
+++ b/index -24-08-25.html
@@ -25,15 +25,6 @@
                 <div class="collapse navbar-collapse navigation" id="navbarSupportedContent">
                     <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
 						<li><a href="index.html">Home</a></li>
-						<li><a href="#">Service</a>
-                                 <ul class="sub-menu">
-                                <li><a  href="executive-coaching.html">Executive Coaching</a></li>
-                                <li><a  href="executive-education.html">Executive Education</a></li>
-                                <li><a  href="organization-behaviour.html">Organization OB HR OD</a></li>
-                                <li><a  href="leadership.html">Leadership Development</a></li>
-                            </ul>
-                       
-                    </li>
                         <li><a href="myself.html">About</a></li>
                         <li><a href="client-testimonial.html">Clients</a></li>
                         <li><a href="#">Gallery</a>
@@ -55,8 +46,7 @@
                     <li><a href="https://www.youtube.com/watch?v=LoOr5RHpujc" target="_blank"
                             style="border-color:#000; background-color:#efe46f; color:#000;"><img
                                 src="assets/img/icon2-black.png" alt="" style="padding-right: 5px;" />Video</a></li>
-                   <!-- red button for service
-						<li>
+                    <li>
                         <div class="dropdown custom-dropdown">
                             <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
@@ -71,7 +61,7 @@
                                 <li><a class="dropdown-item" href="leadership.html">Leadership Development</a></li>
                             </ul>
                         </div>
-                    </li>-->
+                    </li>
                     <!-- <li><a href="#coach-section2" class="btn-color1">Services</a></li> -->
                     <!-- <ul class="sub-menu">
                         <li><a href="executive-coaching.html"><span style="font-weight: bold">Executive
@@ -510,8 +500,8 @@ Vodacom International</small>
                 <p>Copyright by Anamitra Chatterjee. All rights reserved.</p>
                 <ul>
                     <li><a href="executive-coaching.html">Services</a></li>
-                    <li><a href="myself.html">About</a></li>
-                    <li><a href="client-testimonial.html">Clients</a></li>
+                    <li><a href="myself.html"> Anamitra </a></li>
+                    <li><a href="client-testimonial.html">Clients & Testimonials</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
                     <li><a href="assets/img/AnamitraChatterjee-CV.pdf" target="_blank">Bio CV</a></li>
                     <li><a href="https://youtu.be/qVULcHNeX7c?si=dIB5-XDAWqKFh4lC" target="_blank">Profile Video</a>
