--- a/video-gallery.html
+++ b/video-gallery.html
@@ -25,7 +25,7 @@
                 <div class="collapse navbar-collapse navigation" id="navbarSupportedContent">
                     <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
 						<li><a href="index.html">Home</a></li>
-						<li><a href="#">Service</a>
+						<li><a href="#">Services</a>
                                  <ul class="sub-menu">
                                 <li><a  href="executive-coaching.html">Executive Coaching</a></li>
                                 <li><a  href="executive-education.html">Executive Education</a></li>
