--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="collapse navbar-collapse navigation" id="navbarSupportedContent">
                     <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
 						<li><a href="index.html">Home</a></li>
-						<li><a href="#">Services</a>
+						<li><a href="#" style="color:#0a8d78 ">Services</a>
                                  <ul class="sub-menu">
                                 <li><a  href="executive-coaching.html">Executive Coaching</a></li>
                                 <li><a  href="executive-education.html">Executive Education</a></li>
@@ -510,7 +510,7 @@ Vodacom International</small>
                 <p>Copyright by Anamitra Chatterjee. All rights reserved.</p>
                 <ul>
                     <li><a href="executive-coaching.html">Services</a></li>
-                    <li><a href="myself.html">About</a></li>
+                    <li><a href="myself.html">Anamitra</a></li>
                     <li><a href="client-testimonial.html">Clients</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
                     <li><a href="assets/img/AnamitraChatterjee-CV.pdf" target="_blank">Bio CV</a></li>
